Adding folders, new files as yet

--- a/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
+++ b/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
@@ -35,6 +35,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Base\" />
+    <Folder Include="Forms\" />
+    <Folder Include="Grid\" />
+    <Folder Include="Util\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
