--- a/trunk/Habanero.Build/Habanero.Build.csproj
+++ b/trunk/Habanero.Build/Habanero.Build.csproj
@@ -35,7 +35,7 @@
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>..\Build\Debug\Chillisoft.Build.v2.XML</DocumentationFile>
+    <DocumentationFile>..\Build\Debug\Habanero.Build.XML</DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
@@ -97,9 +97,9 @@
       <Project>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</Project>
       <Name>Habanero.Db</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Habanero.Generic\Habanero.Generic.csproj">
+    <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
       <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
-      <Name>Habanero.Generic</Name>
+      <Name>Habanero.Base</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Test.Bo\Habanero.Test.Bo.csproj">
       <Project>{D624008C-47BA-44CC-9CC8-DCEC9F0005B3}</Project>
