--- a/trunk/Habanero.Util/Habanero.Util.csproj
+++ b/trunk/Habanero.Util/Habanero.Util.csproj
@@ -112,6 +112,8 @@
     <Compile Include="ConfigFileSettingsStorer.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="File\DtdLoader.cs" />
+    <Compile Include="File\TextFileLoader.cs" />
     <Compile Include="HabaneroStringBuilder.cs">
       <SubType>Code</SubType>
     </Compile>
