Moved SimpleLookupListSource to BO

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -320,6 +320,7 @@
     <Compile Include="SelectStatementGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SimpleLookupListSource.cs" />
     <Compile Include="SingleRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
