Renamed InputBox... to InputForm...

--- a/trunk/Habanero.UI/Habanero.UI.csproj
+++ b/trunk/Habanero.UI/Habanero.UI.csproj
@@ -101,16 +101,16 @@
     <Compile Include="Grid\IGrid.cs" />
     <Compile Include="Base\IGridDataProvider.cs" />
     <Compile Include="Grid\IGridWithButtons.cs" />
-    <Compile Include="Forms\InputBoxComboBox.cs" />
-    <Compile Include="Forms\InputBoxDate.cs" />
-    <Compile Include="Forms\InputBoxDateRange.cs" />
-    <Compile Include="Forms\InputBoxFileSelect.cs" />
-    <Compile Include="Forms\InputBoxFolderSelect.cs" />
-    <Compile Include="Forms\InputBoxInteger.cs" />
-    <Compile Include="Forms\InputBoxMoney.cs" />
-    <Compile Include="Forms\InputBoxNumeric.cs" />
-    <Compile Include="Forms\InputBoxRadioButton.cs" />
-    <Compile Include="Forms\InputBoxTextBox.cs" />
+    <Compile Include="Forms\InputFormComboBox.cs" />
+    <Compile Include="Forms\InputFormDate.cs" />
+    <Compile Include="Forms\InputFormDateRange.cs" />
+    <Compile Include="Forms\InputFormFileSelect.cs" />
+    <Compile Include="Forms\InputFormFolderSelect.cs" />
+    <Compile Include="Forms\InputFormInteger.cs" />
+    <Compile Include="Forms\InputFormMoney.cs" />
+    <Compile Include="Forms\InputFormNumeric.cs" />
+    <Compile Include="Forms\InputFormRadioButton.cs" />
+    <Compile Include="Forms\InputFormTextBox.cs" />
     <Compile Include="Grid\IReadOnlyGrid.cs" />
     <Compile Include="Base\ISearch.cs" />
     <Compile Include="Util\IWizardStep.cs" />
