--- a/trunk/Habanero.Test.UI/Habanero.Test.UI.csproj
+++ b/trunk/Habanero.Test.UI/Habanero.Test.UI.csproj
@@ -128,4 +128,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
