--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -339,7 +339,7 @@
     <None Include="Loaders\DTDs\classes.dtd" />
     <None Include="Loaders\DTDs\databaseLookupList.dtd" />
     <None Include="Loaders\DTDs\GridPropertyCollection.dtd" />
-    <None Include="Loaders\DTDs\keyDef.dtd" />
+    <None Include="Loaders\DTDs\key.dtd" />
     <None Include="Loaders\DTDs\PrimaryKeyDef.dtd" />
     <None Include="Loaders\DTDs\Prop.dtd" />
     <None Include="Loaders\DTDs\property.dtd" />
