Completed the restructuring of the xml for relationship (old relationshipDef). Only the UI left to do, and the lookupList structure again.

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -343,7 +343,7 @@
     <None Include="Loaders\DTDs\primaryKey.dtd" />
     <None Include="Loaders\DTDs\Prop.dtd" />
     <None Include="Loaders\DTDs\property.dtd" />
-    <None Include="Loaders\DTDs\RelationshipDef.dtd" />
+    <None Include="Loaders\DTDs\relationship.dtd" />
     <None Include="Loaders\DTDs\simpleLookupList.dtd" />
     <None Include="Loaders\DTDs\superClass.dtd" />
     <None Include="Loaders\DTDs\UIDef.dtd" />
